# UUV-Motion-Planner

./: LICENSE  README.md
src/: readme.txt
src/AUV_Traj/map/: CMakeLists.txt  package.xml
src/AUV_Traj/map/include/map/: map_manage.h
src/AUV_Traj/map/src/: map_manage.cpp
src/AUV_Traj/path_planning/: CMakeLists.txt  package.xml
src/AUV_Traj/path_planning/include/path_planning/: dubins.h  path_planning.h
src/AUV_Traj/path_planning/src/: dubins.cpp  path_planning.cpp
src/AUV_Traj/planner/: CMakeLists.txt  package.xml
src/AUV_Traj/planner/config/: config.rviz  config1.rviz  planner.rviz
src/AUV_Traj/planner/include/planner/: plan_manage.h
src/AUV_Traj/planner/launch/: run.launch
src/AUV_Traj/planner/src/: plan_manage.cpp  planner_node.cpp  traj_server.cpp
src/AUV_Traj/traj_opt/: CMakeLists.txt  package.xml
src/AUV_Traj/traj_opt/include/traj_opt/: lbfgs.hpp  traj_opt.h
src/AUV_Traj/traj_opt/msg/: TrajInfo.msg
src/AUV_Traj/traj_opt/src/: traj_opt.cpp
src/thrid_patry/local_map/: CMakeLists.txt  package.xml
src/thrid_patry/local_map/launch/: local_map.xml
src/thrid_patry/local_map/src/: local_map.cpp
src/thrid_patry/point_cloud_gene/: CMakeLists.txt  package.xml
src/thrid_patry/point_cloud_gene/launch/: point_cloud.xml
src/thrid_patry/point_cloud_gene/src/: point_cloud_gene.cpp
src/thrid_patry/traj_msg/: CMakeLists.txt  package.xml
src/thrid_patry/traj_msg/msg/: TrajCmd.msg
src/thrid_patry/waypoint_generator/src/: waypoint_generator.cpp
